[gd_scene load_steps=61 format=2]

[ext_resource path="res://Player/Atta5.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Atta_Detect/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/2Atta5.png" type="Texture" id=4]
[ext_resource path="res://Atta_Detect/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effect/MagicFire.png" type="Texture" id=6]
[ext_resource path="res://Player/Run3.png" type="Texture" id=7]
[ext_resource path="res://Player/Run1.png" type="Texture" id=8]
[ext_resource path="res://Player/Run2.png" type="Texture" id=9]
[ext_resource path="res://Player/Run4.png" type="Texture" id=10]
[ext_resource path="res://Player/Idle.png" type="Texture" id=11]
[ext_resource path="res://Player/Run7.png" type="Texture" id=12]
[ext_resource path="res://Player/Run6.png" type="Texture" id=13]
[ext_resource path="res://Player/Run5.png" type="Texture" id=14]
[ext_resource path="res://Player/Run8.png" type="Texture" id=15]
[ext_resource path="res://Player/Brake1.png" type="Texture" id=16]
[ext_resource path="res://Player/Brake2.png" type="Texture" id=17]
[ext_resource path="res://Player/Brake3.png" type="Texture" id=18]
[ext_resource path="res://Player/Brake4.png" type="Texture" id=19]
[ext_resource path="res://Player/Brake5.png" type="Texture" id=20]
[ext_resource path="res://Player/Atta1.png" type="Texture" id=21]
[ext_resource path="res://Player/Atta2.png" type="Texture" id=22]
[ext_resource path="res://Player/Atta3.png" type="Texture" id=23]
[ext_resource path="res://Player/Atta4.png" type="Texture" id=24]
[ext_resource path="res://Player/Atta6.png" type="Texture" id=25]
[ext_resource path="res://Player/2Atta1.png" type="Texture" id=26]
[ext_resource path="res://Player/2Atta2.png" type="Texture" id=27]
[ext_resource path="res://Player/2Atta3.png" type="Texture" id=28]
[ext_resource path="res://Player/2Atta4.png" type="Texture" id=29]
[ext_resource path="res://Music_Sound/Attack.wav" type="AudioStream" id=30]
[ext_resource path="res://Enemy/Bat.png" type="Texture" id=31]
[ext_resource path="res://Player/Jump3.png" type="Texture" id=32]
[ext_resource path="res://Player/Jump4.png" type="Texture" id=33]
[ext_resource path="res://Player/Jump5.png" type="Texture" id=34]
[ext_resource path="res://Player/Jump1.png" type="Texture" id=35]
[ext_resource path="res://Player/Jump2.png" type="Texture" id=36]
[ext_resource path="res://Player/Jump6.png" type="Texture" id=37]
[ext_resource path="res://Player/anime_full/run2.png" type="Texture" id=38]
[ext_resource path="res://Player/anime_full/run1.png" type="Texture" id=39]
[ext_resource path="res://Player/anime_full/run3.png" type="Texture" id=40]
[ext_resource path="res://Player/anime_full/run6.png" type="Texture" id=41]
[ext_resource path="res://Player/anime_full/run5.png" type="Texture" id=42]
[ext_resource path="res://Player/anime_full/run4.png" type="Texture" id=43]
[ext_resource path="res://Player/anime_full/run7.png" type="Texture" id=44]
[ext_resource path="res://Player/anime_full/run8.png" type="Texture" id=45]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 31 )
region = Rect2( 0, 0, 112, 170 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 31 )
region = Rect2( 112, 0, 112, 170 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 31 )
region = Rect2( 224, 0, 112, 170 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 31 )
region = Rect2( 336, 0, 112, 170 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 31 )
region = Rect2( 448, 0, 112, 170 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 1 ), ExtResource( 25 ) ],
"loop": true,
"name": "Atta1",
"speed": 13.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 15 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 37 ) ],
"loop": false,
"name": "Jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "Brake",
"speed": 15.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 4 ) ],
"loop": true,
"name": "Atta2",
"speed": 11.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 44 ), ExtResource( 45 ) ],
"loop": true,
"name": "Run_full",
"speed": 15.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Dodge",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 24.108
height = 228.172

[sub_resource type="CapsuleShape2D" id=8]
radius = 180.93
height = 22.508

[sub_resource type="CapsuleShape2D" id=9]
radius = 32.5754
height = 184.693

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 1

[sub_resource type="Gradient" id=11]
colors = PoolColorArray( 0.415686, 0, 0.145098, 1, 0.968627, 0.227451, 0.227451, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.265957 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( -5, -250, 1 )
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
linear_accel_random = 0.7
damping = 2.0
scale = 0.4
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 2.10696, 2.42731 )
z_index = 1
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.10696, 5.57269 )
scale = Vector2( 0.615082, 0.615082 )
frames = SubResource( 6 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -32.449, -2.36 )
shape = SubResource( 7 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 9.53674e-07, 5.30593 )
rotation = -3.14159
scale = Vector2( 0.66324, 0.66324 )

[node name="PlayerHitbox" parent="HitboxPivot" instance=ExtResource( 3 )]
collision_mask = 8

[node name="CollisionShape2D" parent="HitboxPivot/PlayerHitbox" index="0"]
position = Vector2( -177.753, 35.7842 )
shape = SubResource( 8 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
position = Vector2( -4.954, -0.123 )
scale = Vector2( 0.66324, 0.66324 )
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -40.4186, -6.25194 )
shape = SubResource( 9 )

[node name="WeaponPos" type="Position2D" parent="."]
position = Vector2( -96.33, 77.76 )

[node name="AttaTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Skill1_CD" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="InFogState" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Dodge_CD" type="Timer" parent="."]
autostart = true

[node name="MotionDissolve" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="SoundEffect" type="Node2D" parent="."]

[node name="Attack" type="AudioStreamPlayer2D" parent="SoundEffect"]
stream = ExtResource( 30 )

[node name="WeaponEffect" type="KinematicBody2D" parent="."]
position = Vector2( -105.305, 73.5 )

[node name="Particles2D" type="Particles2D" parent="WeaponEffect"]
material = SubResource( 10 )
position = Vector2( 4.53913, 9.3371 )
amount = 50
lifetime = 1.3
local_coords = false
process_material = SubResource( 15 )
texture = ExtResource( 6 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="AttaTimer" to="." method="_on_AttaTimer_timeout"]
[connection signal="timeout" from="Skill1_CD" to="." method="_on_Skill1_CD_timeout"]
[connection signal="timeout" from="InFogState" to="." method="_on_InFogState_timeout"]
[connection signal="timeout" from="Dodge_CD" to="." method="_on_Dodge_CD_timeout"]
[connection signal="timeout" from="MotionDissolve" to="." method="_on_MotionDissolve_timeout"]

[editable path="HitboxPivot/PlayerHitbox"]

[editable path="Hurtbox"]
